Pillars vision your opinion added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bangladesh 2.0 - PH Assignment 1</title>
+  <title>Bangladesh 2.0 -Assignment One -PH</title>
   <link rel="stylesheet" href="styles/style.css">
   <link rel="shortcut icon" href="assets/bangladesh.png" type="image/x-icon">
 </head>
@@ -32,9 +32,111 @@
       </div>
     </section>
   </header>
-  <main>
-
-  </main>
+ 
+    <!-- Main Section -->
+    <main>
+      <div class="main-section-one">
+       <div class="main-section-one-title">
+        <h1>Pillars of "Bangladesh 2.0"</h1>
+       </div>
+       <div class="cards">
+        <div class="card">
+          <img src="assets/card-icon.png" alt="bulb/idea">
+          <h3>Innovation</h3>
+          <p>Bangladesh has emerging startups, digital hubs, and local innovations gaining international recognition.</p>
+        </div>
+        <div class="card">
+          <img src="assets/card-icon.png" alt="bulb/idea">
+          <h3>Sustainability</h3>
+          <p>Renewable energy projects and eco-friendly practices are gradually shaping Bangladesh’s sustainable development.</p>
+        </div>
+        <div class="card">
+          <img src="assets/card-icon.png" alt="bulb/idea">
+          <h3>Infrastructure</h3>
+          <p>Modern bridges, highways, and metro rail projects are transforming connectivity in Bangladesh.</p>
+        </div>
+        <div class="card">
+          <img src="assets/card-icon.png" alt="bulb/idea">
+          <h3>Empowerment</h3>
+          <p>Education programs and microfinance initiatives are uplifting underprivileged communities in Bangladesh.</p>
+        </div>
+       </div>
+      </div>
+      <div class="main-section-two">
+        <div class="main-section-two-title">
+          <h1>The Vision of Future</h1>
+        </div>
+        <div class="main-section-two-description">
+          <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+        </div>
+        <div class="cards-2">
+          <div class="blue-card">
+            <img src="assets/card-icon.png" alt="bulb/idea">
+            <h3>Digital Transformation</h3>
+            <p>The rapid adoption of digital tools is reshaping industries and improving services in Bangladesh.</p>
+            <div>
+              <button class="blue-card-btn">Learn More</button>
+            </div>
+          </div>
+          <div class="green-card">
+            <img src="assets/card-icon.png" alt="bulb/idea">
+            <h3>Green Energy</h3>
+            <p>Bangladesh is advancing renewable energy efforts, focusing on sustainable solutions to meet growing power demands.</p>
+            <div>
+              <button class="green-card-btn">Learn More</button>
+            </div>
+          </div>
+          <div class="gold-card">
+            <img src="assets/card-icon.png" alt="bulb/idea">
+            <h3>Modern Infrastructure</h3>
+            <p>Ongoing development of transport networks and urban facilities is enhancing mobility and boosting economic activities.</p>
+            <div>
+              <button class="gold-card-btn">Learn More</button>
+            </div>
+          </div>
+        </div>
+        <div class="main-section-two-quote">
+          <p>"To build Bangladesh 2.0, we must embrace innovation and inclusivity, ensuring that every citizen, regardless of their background, has the opportunity to contribute meaningfully to our collective future and prosperity. By harnessing the power of technology and social entrepreneurship, we can create a sustainable economy that uplifts the marginalized and empowers the youth. It is essential that we foster a culture of collaboration, where ideas flow freely and where every individual feels valued and heard in the journey toward a more equitable society."</p>
+          <h3 class="quote-author">Dr. Muhammad Yunus</h3>
+          <p class="quote-author-position">Chief Adviser of the People's Republic of Bangladesh</p>
+        </div>
+      </div>
+      <div class="main-section-three">
+        <h1>Your Opinion Matters</h1>
+        <div class="main-section-three-survey">
+          <table>
+            <thead  class="table-header">
+              <tr class="table-header-row">
+                <td>Questions</td>
+                <td>Select Your Opinion</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="table-row">
+                <td class="table-border">Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                <td class="table-border2"><select name="survey1" id="">
+                  <option value="1">Yes, I agree</option>
+                  <option value="2">No, I disagree</option>
+                </select></td>
+              </tr>
+              <tr class="table-row">
+                <td class="table-border">Do you believe technology can significantly improve the education system in Bangladesh?</td>
+                <td class="table-border2"><select name="survey2" id="">
+                  <option value="1">Yes, I agree</option>
+                  <option value="2">No, I disagree</option>
+                </select></td>
+              </tr>
+              <tr class="table-row">
+                <td class="table-border">Do you think the government should strategize for Economical Improvement </td>
+                <td class="table-border2"><select name="survey3" id="">
+                  <option value="1">Yes, I agree</option>
+                  <option value="2">No, I disagree</option>
+                </select></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
 
   <footer>
 
