recent news added

--- a/index.html
+++ b/index.html
@@ -138,6 +138,58 @@
         </div>
       </div>
 
+      <div class="main-section-four">
+        <h1>Recent News</h1>
+        <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+        <div class="main-section-four-1">
+          <div class="main-section-four-img">
+            <img src="assets/satelite.png" alt="Bangladesh Satelite">
+          </div>
+          <div class="main-section-four-1-inner">
+            <h2>Bangladesh Launches New Satellite</h2>
+            <img src="assets/al-jazeera.png" alt="Al Jazeera">
+            <div style="display: flex; gap: 10px;"><p>7 January 2025</p><p>Time: 10.46 PM</p></div>
+            <p>Bangladesh has achieved a historic milestone by successfully launching a new satellite, showcasing its growing capabilities in space technology. This advancement marks a significant step toward enhancing communication, disaster management, and economic development for the nation.</p>
+            <div>
+              <button class="btn-primary">Read More</button>
+            </div>
+          </div>
+        </div>
+        <!-- SEPERATE -->
+        <div class="main-section-four-2">
+          <div class="main-section-four-1-inner">
+            <h2>Dr. Muhammad Yunus</h2>
+            <img src="assets/bbc2.png" alt="BBC">
+            <div style="display: flex; gap: 10px;"><p>3 January 2025</p><p>Time: 11.50 AM</p></div>
+            <p>Dr. Muhammad Yunus, an inspiring national figure, envisions a prosperous Bangladesh, championing innovation, economic inclusion, and unity to build a future free from poverty and inequality, while empowering individuals to become agents of change in their communities.</p>
+            <div>
+              <button class="btn-primary">Read More</button>
+            </div>
+          </div>
+          <div class="main-section-four-img">
+            <img src="assets/DrMuhammadYunus.jpg" alt="Dr Muhammad Yunus" width="408px" height="306px" style="object-fit: cover;">
+          </div>
+        </div>
+        <!-- SEPERATE -->
+        <div class="main-section-four-3">
+          <div class="main-section-four-img">
+            <img src="assets/Bangladesh-India.jpg" alt="Protest" width="408px" height="306px">
+          </div>
+          <div class="main-section-four-1-inner">
+            <h2>Bangladesh leader’s ‘megaphone diplomacy’ irks India</h2>
+            <img src="assets/bbc2.png" alt="BBC">
+            <div style="display: flex; gap: 10px;"><p>13 September 2024</p><p>Time: 01.30 PM</p></div>
+            <p>The relationship between neighbours India and Bangladesh continues to remain frosty more than a month after former prime minister Sheikh Hasina was ousted from power. While Hasina’s stay in India remains an irritant, a recent interview by Bangladesh’s interim leader Muhammad Yunus also took India by surprise. The BBC’s Anbarasan Ethirajan examines where ties stand now.</p>
+            <div>
+              <button class="btn-primary">Read More</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+    </main>
+
   <footer>
 
   </footer>
