donate section added

--- a/index.html
+++ b/index.html
@@ -187,6 +187,30 @@
         </div>
       </div>
 
+      <div class="main-section-five">
+        <h1>Donate Today</h1>
+        <p>Your generous donation to Bangladesh 2.0 will help propel the nation towards a brighter future by supporting groundbreaking projects in education, technology, and environmental sustainability. By investing in innovation and inclusive development, you contribute to building a prosperous, resilient, and forward-thinking Bangladesh.</p>
+        <div class="donation-boxes">
+          <div class="donation-amount-box">
+            <h1>100 Taka</h1>
+          </div>
+          <div class="donation-amount-box" id="selected-by-default">
+            <h1>200 Taka</h1>
+          </div>
+          <div class="donation-amount-box">
+            <h1>500 Taka</h1>
+          </div>
+          <div class="donation-amount-box">
+            <h1>1000 Taka</h1>
+          </div>
+        </div>
+        <div id="custom-donation">
+          <input type="number" name="donation" placeholder="Other Amount (Taka)" id="" min="100">
+        </div>
+        <div>
+          <button class="btn-primary">Donate Now</button>
+        </div>
+      </div>
 
     </main>
 
